[package]
name = "midi"
version = "0.1.0"
edition = "2021"

[build-dependencies]
cc = { version = "1.0", features = ["parallel"] }
pkg-config = "0.3"
bindgen = "0.60.1"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2"
pancurses = "0.17"
dual-shock4-controller = "0.1.0"

[dependencies.dynamic_midi]
path = "src/dynamic_midi"